--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
+    <h1>TorosVacas</h1>
+    <form id="torosVacas-form">
+      <label for="codigo">codigo:</label>
+      <input type="number" id="codigo" />
+      <label for="codigoAdivina">codigoAdivina:</label>
+      <input type="number" id="codigoAdivina" />
+      <input type="submit" value="ingresar" />
     </form>
     <div id="resultado-div"></div>
 
